--- a/Lbs.groupproject.2018-2019/Lbs.groupproject.2018-2019/Lbs.groupproject._2018_2019/Lbs.groupproject._2018_2019.csproj
+++ b/Lbs.groupproject.2018-2019/Lbs.groupproject.2018-2019/Lbs.groupproject._2018_2019/Lbs.groupproject._2018_2019.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CollidableObject.cs" />
+    <None Include="Enemy.cs" />
     <Compile Include="Player1Controls.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
