--- a/Lbs.groupproject.2018-2019/Lbs.groupproject.2018-2019/Lbs.groupproject._2018_2019/Lbs.groupproject._2018_2019.csproj
+++ b/Lbs.groupproject.2018-2019/Lbs.groupproject.2018-2019/Lbs.groupproject._2018_2019/Lbs.groupproject._2018_2019.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="CollidableObject.cs" />
     <None Include="Enemy.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Player1Controls.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
