added Ingame.cs and moved some code there

--- a/Lbs.groupproject.2018-2019/Lbs.groupproject.2018-2019/Lbs.groupproject._2018_2019/Lbs.groupproject._2018_2019.csproj
+++ b/Lbs.groupproject.2018-2019/Lbs.groupproject.2018-2019/Lbs.groupproject._2018_2019/Lbs.groupproject._2018_2019.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="CollidableObject.cs" />
     <None Include="Enemy.cs" />
+    <Compile Include="InGame.cs" />
     <Compile Include="MovableBackground.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerControls.cs" />
