--- a/Lbs.groupproject.2018-2019/Lbs.groupproject.2018-2019/Lbs.groupproject._2018_2019/Lbs.groupproject._2018_2019.csproj
+++ b/Lbs.groupproject.2018-2019/Lbs.groupproject.2018-2019/Lbs.groupproject._2018_2019/Lbs.groupproject._2018_2019.csproj
@@ -58,7 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CollidableObject.cs" />
-    <None Include="Enemy.cs" />
+    <Compile Include="Enemy.cs" />
+    <Compile Include="EnemyManager.cs" />
     <Compile Include="InGame.cs" />
     <Compile Include="MovableBackground.cs" />
     <Compile Include="Player.cs" />
